Fix footer on mobile for events page so it sits at the bottom but retains view on larger screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -276,11 +276,9 @@ footer {
  =                             EVENTS HTML                               =   
  =========================================================================  
  */
-
 .events {
   display: grid;
   grid-template-columns: 1fr 4fr;
-  height: var(--main-body);
 }
 
 .events > aside {
@@ -317,11 +315,16 @@ article > .current-events {
   .events {
     display: grid;
     grid-template-columns: 1fr;
-    height: var(--main-body);
   }
 
   aside {
     display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .events {
+    height: var(--main-body);
   }
 }
 
